# fastapi_classwork_kuvatov_abylay

./: .gitignore  pyproject.toml
kino/app/: main.py
kino/app/api/: application.py  router.py
kino/app/api/genre/: ctrl.py  routes.py
kino/app/api/genre/schemas/: requests.py  responses.py
kino/app/api/person/: ctrl.py  routes.py
kino/app/api/person/schemas/: requests.py  responses.py
kino/app/core/: ctrl.py  schemas.py
kino/app/core/exc/: handlers.py  http.py
kino/app/db/: conf.py
kino/app/db/models/: __init__.py  base.py  genre.py  person.py
kino/app/db/repositories/: base.py  genre.py  person.py
kino/migrations/models/: 1_20231215150209_update.py
